--- a/Mihomo /Mihomo.yaml
+++ b/Mihomo /Mihomo.yaml
@@ -185,18 +185,7 @@ dns:
     - +.local
     - time.*.com
     - ntp.*.com
-    - +.market.xiaomi.com
-    - +.ip.me
-    - +.ipinfo.io
-    - +.api.ipapi.is
-    - +.api.ipify.org
 
-    - +.soadz.com
-    - +.leishao.eu.org
-    - +.xingzuowang.eu.org
-    - +.leishao.us.kg
-    - +.leishao.nyc.mn
-    - +.leishao.cloudns.org
 
 
   default-nameserver:
@@ -215,8 +204,8 @@ dns:
   # 有且只会用在解析代理节点的域名。
   # 这边最好就是使用国内的公共DNS，避免你节点的域名被污染了，使用运营商DNS解析的结果不准确。
   proxy-server-nameserver:
-    - tls://161874.alidns.com
-    - https://161874.alidns.com/dns-query
+    - tls://alidns.com
+    - https://alidns.com/dns-query
     - tls://dot.pub
     - https://doh.pub/dns-query
 
@@ -262,7 +251,7 @@ NodeParam: &NodeParam {type: http, interval: 86400, health-check: {enable: true,
 # 锚点 - 节点订阅
 proxy-providers:
   我的节点:
-    url: 'https://sub.soadz.com:8443/leishao/download/collection/all_count?target=ClashMeta'
+    url: ''
     <<: *NodeParam
     path: './proxy_provider/providers.yaml'
 
@@ -322,11 +311,7 @@ LoadBalance: &LoadBalance
 
 
 proxies:
-  - {"server":"tw.leishao.nyc.mn","port":443,"cipher":"auto","uuid":"9a00efbc-efe4-4a24-83e0-32780ad07b42","skip-cert-verify":true,"udp":true,"name":"TwVmWsTls","type":"vmess","alterId":0,"network":"ws","tls":true,"ws-opts":{"path":"/9a00efbc","headers":{"Host":"tw.leishao.nyc.mn"}},"servername":"tw.leishao.nyc.mn"}
-  - {"server":"malaysia.com","port":443,"cipher":"auto","uuid":"5e678a1f-bed3-4a9b-bad5-b7f9e0aadedb","udp":true,"name":"RnVmTls","type":"vmess","alterId":0,"network":"ws","tls":true,"ws-opts":{"path":"/5e678a1f","headers":{"Host":"rn.leishao.eu.org"}},"skip-cert-verify":true,"servername":"rn.leishao.eu.org"}
-  - {"type":"hysteria2","name":"Serv00Hy2_S10","server":"128.204.223.112","port":55808,"password":"bc97f674-c578-4940-9234-0a1da46041b9","sni":"www.bing.com","skip-cert-verify":true,"tfo":false,"udp":true}
-  - {"type":"tuic","name":"Tuic_S10","server":"128.204.223.112","port":58714,"password":"admin123","uuid":"bc97f674-c578-4940-9234-0a1da46041b9","sni":"www.bing.com","congestion-control":"bbr","udp-relay_mode":"native","alpn":["h3"],"skip-cert-verify":true,"udp":true,"version":5}
-  - {"type":"hysteria2","name":"Serv00Hy2_S11","server":"128.204.223.118","port":11946,"password":"bc97f674-c578-4940-9234-0a1da46041b9","sni":"www.bing.com","skip-cert-verify":true,"tfo":false,"udp":true}
+
   - {"type":"tuic","name":"Tuic_S11","server":"128.204.223.118","port":61280,"password":"admin123","uuid":"bc97f674-c578-4940-9234-0a1da46041b9","sni":"www.bing.com","congestion-control":"bbr","udp-relay_mode":"native","alpn":["h3"],"skip-cert-verify":true,"udp":true,"version":5}
 
 # 策略组
